fixed item-editor overflow

--- a/resources/css/styles.less
+++ b/resources/css/styles.less
@@ -760,7 +760,8 @@
     .item-editor {
       flex: 1;
       min-width: 350px;
-      overflow: auto;
+      overflow-y: auto;
+      overflow-x: hidden;
       height: calc(~"100vh - 285px");
       > form, .nothing-selected {
         height: calc(~"100vh - 285px");
